Correction servlets + interfaces + usecases + repositories